XIVY-17200 Replace deprecated StringUtils functions >> R10.0